--- a/view/blog/spring/spring-mysql/mybatis-plus/DataSource.html
+++ b/view/blog/spring/spring-mysql/mybatis-plus/DataSource.html
@@ -810,22 +810,40 @@
 <main class="main-content">
     <div class="container max-w-4xl">
         <article class="markdown-content bg-white rounded-lg shadow p-6 md:p-8">
-            <h1>DataSource</h1>
-<ul>
-<li>mybatis-plus的动态数据源DynamicRoutingDataSource集成了mybatis的SqlSessionFactory和hikari的HikariDataSource</li>
-<li>mybatis-plus的DynamicDataSourceAutoConfiguration自动装配是实现集成的重要入口</li>
-</ul>
-<p><img alt="图片替代文本" src="DataSource-Simple.drawio.png" /></p>
+            <h1>mybatis-plus DataSource 源码解析</h1>
+<p>本文深入解读mybatis-plus的DataSource是如何整合hikari DataSource 和 p6spy DataSource</p>
+<h2>简介</h2>
+<p>javax.sql.DataSource是JDBC规范的一个核心接口，作为 DriverManager 机制的替代方案，用于管理数据库连接。
+mybatis的SqlSessionFactory操作数据库就是基于DataSource的实现类，参见<code>org.apache.ibatis.mapping.Environment</code></p>
+<pre><code class="language-java">public final class Environment {
+   private final DataSource dataSource;
+}
+</code></pre>
+<p>当你使用mybatis作为操作数据库的组件库，需要提供一个DataSource设置到SqlSessionFactory。
+如果选择了hikari线程池，实际上就是将hikari的DataSource实现设置到mybatis的SqlSessionFactory</p>
+<pre><code class="language-java">@Bean
+public SqlSessionFactoryBean sqlSessionFactory(DataSource dataSource) throws IOException {
+    HikariConfig config = new HikariConfig();
+    DataSource dataSource = HikariDataSource(config);
+    SqlSessionFactoryBean sessionFactory = new SqlSessionFactoryBean();
+    sessionFactory.setDataSource(dataSource);
+    return sessionFactory;
+}
+</code></pre>
+<p>现实的业务场景可能需要连接多个数据库，一个现成的解决方案就是引入mybatis-plus的多数据源组件。</p>
+<p>mybatis-plus的多数据源DynamicRoutingDataSource也是DataSource的实现，并且集成了各种线程池和p6spy日志功能。
+其原理如图所示：
+<img alt="图片替代文本" src="DataSource-Simple.drawio.png" /></p>
+<p>mybatis-plus的DynamicRoutingDataSource，hikari的HikariDataSource，p6spy的P6DataSource如同俄罗斯套娃，通过
+DataSource嵌套的方式，实现了多数据源切换，线程池，日志的功能。</p>
 <h2>创建DataSource</h2>
 <p>抽象接口的链路设计：</p>
 <pre><code class="language-text">DataSource --&gt; DynamicDataSourceProvider --&gt;DataSourceCreator
 </code></pre>
-<h3>DataSource</h3>
+<h3>DynamicRoutingDataSource</h3>
+<p>DynamicRoutingDataSource是mybatis-plus的DataSource接口实现</p>
 <p><img alt="图片替代文本" src="DynamicRoutingDataSource.png" /></p>
-<ul>
-<li>自动装配将DynamicRoutingDataSource类注册为DataSource接口类型的Bean到Spring容器</li>
-<li>DynamicRoutingDataSource内部方法afterPropertiesSet调用了DynamicDataSourceProvider的loadDataSources方法加载底层数据源</li>
-</ul>
+<p>自动装配DynamicDataSourceAutoConfiguration将DynamicRoutingDataSource类注册为DataSource接口类型的Bean到Spring容器</p>
 <pre><code class="language-java">public class DynamicDataSourceAutoConfiguration implements InitializingBean {
     @Bean
     @ConditionalOnMissingBean
@@ -835,8 +853,10 @@
         return dataSource;
     }
 }
-
-@Slf4j
+</code></pre>
+<p>DynamicRoutingDataSource本身不实现数据库操作，而是通过引入其他DataSource实现。</p>
+<p>DynamicRoutingDataSource内部方法afterPropertiesSet调用了DynamicDataSourceProvider的loadDataSources方法加载不同的DataSource实现，</p>
+<pre><code class="language-java">@Slf4j
 public class DynamicRoutingDataSource extends AbstractRoutingDataSource implements InitializingBean, DisposableBean {
     @Autowired
     private List&lt;DynamicDataSourceProvider&gt; providers;
