--- a/view/blog/spring/spring-mysql/mybatis-plus/DataSource.html
+++ b/view/blog/spring/spring-mysql/mybatis-plus/DataSource.html
@@ -811,7 +811,9 @@
     <div class="container max-w-4xl">
         <article class="markdown-content bg-white rounded-lg shadow p-6 md:p-8">
             <h1>mybatis-plus DataSource 源码解析</h1>
+<blockquote>
 <p>本文深入解读mybatis-plus的DataSource是如何整合hikari DataSource 和 p6spy DataSource</p>
+</blockquote>
 <h2>简介</h2>
 <p>javax.sql.DataSource是JDBC规范的一个核心接口，作为 DriverManager 机制的替代方案，用于管理数据库连接。
 mybatis的SqlSessionFactory操作数据库就是基于DataSource的实现类，参见<code>org.apache.ibatis.mapping.Environment</code></p>
@@ -830,10 +832,10 @@ public SqlSessionFactoryBean sqlSessionFactory(DataSource dataSource) throws IOE
     return sessionFactory;
 }
 </code></pre>
-<p>现实的业务场景可能需要连接多个数据库，一个现成的解决方案就是引入mybatis-plus的多数据源组件。</p>
+<p>现实的业务场景可能需要连接多个数据库，就需要引入mybatis-plus的多数据源组件。</p>
 <p>mybatis-plus的多数据源DynamicRoutingDataSource也是DataSource的实现，并且集成了各种线程池和p6spy日志功能。
-其原理如图所示：
-<img alt="图片替代文本" src="DataSource-Simple.drawio.png" /></p>
+其原理如图所示：</p>
+<p><img alt="图片替代文本" src="DataSource-Simple.drawio.png" /></p>
 <p>mybatis-plus的DynamicRoutingDataSource，hikari的HikariDataSource，p6spy的P6DataSource如同俄罗斯套娃，通过
 DataSource嵌套的方式，实现了多数据源切换，线程池，日志的功能。</p>
 <h2>创建DataSource</h2>
@@ -879,19 +881,20 @@ public class DynamicRoutingDataSource extends AbstractRoutingDataSource implemen
 }
 </code></pre>
 <h3>DynamicDataSourceProvider</h3>
+<p>DynamicDataSourceProvider是多数据源加载接口，默认的实现YmlDynamicDataSourceProvider类是从yml信息中加载所有数据源</p>
+<p>可以通过实现这个接口并且注册到spring的方式重写数据源加载逻辑</p>
 <p><img alt="图片替代文本" src="YmlDynamicDataSourceProvider.png" /></p>
-<ul>
-<li>自动装配将YmlDynamicDataSourceProvider类注册为DynamicDataSourceProvider接口类型的Bean到Spring容器</li>
-<li>YmlDynamicDataSourceProvider通过其父类AbstractDataSourceProvider的createDataSourceMap方法调用到DefaultDataSourceCreator接口的createDataSource方法创建数据源</li>
-</ul>
+<p>自动装配注册了YmlDynamicDataSourceProvider</p>
 <pre><code class="language-java">public class DynamicDataSourceAutoConfiguration implements InitializingBean {
     @Bean
     public DynamicDataSourceProvider ymlDynamicDataSourceProvider() {
         return new YmlDynamicDataSourceProvider(properties.getDatasource());
     }
 }
-
-public class YmlDynamicDataSourceProvider extends AbstractDataSourceProvider {
+</code></pre>
+<p>YmlDynamicDataSourceProvider通过其父类AbstractDataSourceProvider的createDataSourceMap方法
+调用到DefaultDataSourceCreator接口的createDataSource方法创建数据源</p>
+<pre><code class="language-java">public class YmlDynamicDataSourceProvider extends AbstractDataSourceProvider {
     @Override
     public Map&lt;String, DataSource&gt; loadDataSources() {
         return createDataSourceMap(dataSourcePropertiesMap);
@@ -921,14 +924,10 @@ public abstract class AbstractDataSourceProvider implements DynamicDataSourcePro
 }
 </code></pre>
 <h3>DataSourceCreator</h3>
+<p>DataSourceCreator是不同DataSource的创建接口，选用hikariDataSource,对应就是由HikariDataSourceCreator创建</p>
+<p>可以通过实现自己的DataSourceCreator增加数据源，或者覆盖默认的数据源创建器</p>
 <p><img alt="图片替代文本" src="HikariDataSourceCreator.png" /></p>
-<ul>
-<li>自动装配将HikariDataSourceCreator类注册为DataSourceCreator接口类型的Bean到Spring容器</li>
-<li>多个注册的DataSourceCreator，List<DataSourceCreator>又被设置到DefaultDataSourceCreator类的属性</li>
-<li>DefaultDataSourceCreator的createDataSource方法循环调用DataSourceCreator接口实现类的createDataSource方法</li>
-<li>DataSourceCreator接口实现类的createDataSource方法会先调用其父类AbstractDataSourceCreator的createDataSource方法</li>
-<li>AbstractDataSourceCreator的createDataSource方法调用的wrapDataSource方法实现了p6spay数据源的包裹</li>
-</ul>
+<p>自动装配将HikariDataSourceCreator类注册为DataSourceCreator接口类型的Bean到Spring容器</p>
 <pre><code class="language-java">public class DynamicDataSourceCreatorAutoConfiguration {
     @ConditionalOnClass(HikariDataSource.class)
     @Configuration
@@ -949,8 +948,22 @@ public abstract class AbstractDataSourceProvider implements DynamicDataSourcePro
         return defaultDataSourceCreator;
     }
 }
-
-public class DefaultDataSourceCreator {
+</code></pre>
+<p>多个注册的DataSourceCreator，List<DataSourceCreator>又被设置到DefaultDataSourceCreator类的属性</p>
+<pre><code class="language-javas">public class DynamicDataSourceCreatorAutoConfiguration {
+    @Primary
+    @Bean
+    @ConditionalOnMissingBean
+    public DefaultDataSourceCreator dataSourceCreator(List&lt;DataSourceCreator&gt; dataSourceCreators) {
+        DefaultDataSourceCreator defaultDataSourceCreator = new DefaultDataSourceCreator();
+        defaultDataSourceCreator.setCreators(dataSourceCreators);
+        return defaultDataSourceCreator;
+    }
+}
+</code></pre>
+<p>DefaultDataSourceCreator的createDataSource方法循环调用DataSourceCreator接口实现类的createDataSource方法</p>
+<p>特别的，如果你实现了的DataSourceCreator和系统默认实现是同一个，比如都是hikari，并且注册了，那么这里使用顺序靠前的那个创建器</p>
+<pre><code class="language-java">public class DefaultDataSourceCreator {
 
     private List&lt;DataSourceCreator&gt; creators;
 
@@ -969,8 +982,11 @@ public class DefaultDataSourceCreator {
     }
 
 }
-
-@Slf4j
+</code></pre>
+<p>DataSourceCreator接口实现类的createDataSource方法会先调用其父类AbstractDataSourceCreator的createDataSource方法</p>
+<p>AbstractDataSourceCreator的createDataSource方法调用的wrapDataSource方法实现了p6spay数据源的包裹</p>
+<p>mybatis-plus是在这里实现对p6spy功能的整合</p>
+<pre><code class="language-java">@Slf4j
 public abstract class AbstractDataSourceCreator implements DataSourceCreator {
     @Override
     public DataSource createDataSource(DataSourceProperty dataSourceProperty) {
@@ -1018,12 +1034,7 @@ public final class DriverDataSource implements DataSource {
 <p>主要的调用链路如下</p>
 <pre><code class="language-text">SqlSessionTemplate --&gt; SqlSessionFactory --&gt; DynamicRoutingDataSource
 </code></pre>
-<ul>
-<li>自动装配注册了SqlSessionFactory类型的Bean，注入的DataSource就是DynamicRoutingDataSource</li>
-<li>自动装配注册了SqlSessionTemplate类型的Bean，其方法注入了SqlSessionFactory</li>
-<li>当调用sqlSessionTemplate执行SQL时，使用的数据源是DynamicRoutingDataSource，底层用就是HikariDataSource。</li>
-<li>除了HikariDataSource，DynamicDataSourceCreatorAutoConfiguration还可以注册DruidDataSource，BeeDataSource，BasicDataSource等等。</li>
-</ul>
+<p>MybatisPlusAutoConfiguration这个自动装配将DynamicRoutingDataSource设置到SqlSessionFactory，完成和mybatis的DataSource整合</p>
 <pre><code class="language-java">public class MybatisPlusAutoConfiguration implements InitializingBean {
     @Bean
     @ConditionalOnMissingBean
