--- a/view/blog/spring/spring-mysql/mybatis-plus/DataSource.html
+++ b/view/blog/spring/spring-mysql/mybatis-plus/DataSource.html
@@ -812,7 +812,7 @@
         <article class="markdown-content bg-white rounded-lg shadow p-6 md:p-8">
             <h1>mybatis-plus DataSource 源码解析</h1>
 <blockquote>
-<p>本文深入解读mybatis-plus的DataSource是如何整合hikari DataSource 和 p6spy DataSource</p>
+<p>本文深入解读mybatis-plus的DataSource是如何对hikari DataSource 和 p6spy DataSource，以及mybatis的SqlSessionFactory进行整合的。</p>
 </blockquote>
 <h2>简介</h2>
 <p>javax.sql.DataSource是JDBC规范的一个核心接口，作为 DriverManager 机制的替代方案，用于管理数据库连接。
