--- a/view/blog/spring/spring-mysql/mybatis-plus/DataSource.html
+++ b/view/blog/spring/spring-mysql/mybatis-plus/DataSource.html
@@ -851,7 +851,7 @@
                 <a href="/sprdoc/blog_index.html" class="back-link">返回列表</a>
             </div>
 
-            <h1>mybatis-plus DataSource 源码解析</h1>
+            <h1>mybatis-plus DataSource 源码分析</h1>
 <blockquote>
 <p>本文深入解读mybatis-plus的DataSource是如何对hikari DataSource 和 p6spy DataSource，以及mybatis的SqlSessionFactory进行整合的。</p>
 </blockquote>
