--- a/view/blog/spring/spring-mysql/mybatis-plus/Mapper.html
+++ b/view/blog/spring/spring-mysql/mybatis-plus/Mapper.html
@@ -851,7 +851,10 @@
                 <a href="/sprdoc/blog_index.html" class="back-link">返回列表</a>
             </div>
 
-            <h1>Mapper</h1>
+            <h1>mybatis-plus Mapper 源码分析</h1>
+<blockquote>
+<p>本文深入解读mybatis-plus Mapper的实现原理，MapperScan的注册原理</p>
+</blockquote>
 <p>mybatis通常的用法如下：</p>
 <p>定义接口</p>
 <pre><code class="language-java">public interface UserMapper {
